# iot-lab

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig
doc/: lab1.odt  lab2.odt  lab3.odt  lab4.odt  lab5.odt
main/: CMakeLists.txt  app_main.c
main/www/: index.html
makefiles/: flash.mk  idf-setup.mk  variables.mk
tools/: device-sim.sh
